[tool.poetry]
name = "pubmed-fetcher"
version = "0.1.0"
description = "CLI tool to fetch PubMed papers with pharma/biotech author affiliations."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "pubmed_fetcher", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.13"
requests = "^2.31"
pandas = "^2.2"

[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher.cli.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
